[package]
name = "bms-get"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = "1.0.226"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.89"
regex = "1.11.3"
anyhow = "1.0.100"
scraper = "0.24.0"
encoding_rs = "0.8.35"
futures-util = "0.3"
indicatif = "0.18.3"
env_logger = "0.11.8"
log = "0.4.29"
zip = "8.5.0"
unrar = "0.5.8"
